examples/test/testpolicy13379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13379
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key47: value23
      key19: value31
      key25: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value33
          key5: value0
      podSelector:
        matchLabels:
          key49: value4
          key9: value21
          key20: value48
